--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -21,6 +21,7 @@
     "node-emoji": "1.10.0",
     "prism-themes": "^1.1.0",
     "prismjs": "^1.16.0",
+    "react-element-to-jsx-string": "^14.0.2",
     "string-raw": "^1.0.1",
     "vuex": "^3.1.0"
   },
