Update storybook-readme package.json for addon-catalog

--- a/packages/storybook-readme/package.json
+++ b/packages/storybook-readme/package.json
@@ -55,7 +55,12 @@
     "storybook",
     "react-storybook",
     "docs",
-    "readme"
+    "readme",
+    "storybook-addon",
+    "organize"
   ],
-  "author": "valeriy.sorokobatko@gmail.com"
+  "author": "valeriy.sorokobatko@gmail.com",
+  "storybook": {
+    "displayName": "Readme"
+  }
 }
